Keep sources at top level
This should make them easier to work with while the project is small.

--- a/onesock.cabal
+++ b/onesock.cabal
@@ -9,7 +9,7 @@ Build-Type: Simple
 Cabal-Version: >= 1.2
 
 Executable OneSock
-  main-is: OneSock/Main.hs
+  main-is: Main.hs
   Build-Depends:
     base >= 4,
     directory,
